requirements.txt and 로컬_개발_환경_설정.md 수정

--- a/docs/로컬_개발_환경_설정.md
+++ b/docs/로컬_개발_환경_설정.md
@@ -67,7 +67,7 @@
    ```powershell
    cd backend_new
    .\venv\Scripts\Activate
-   celery -A app.workers.celery_app worker --loglevel=info
+   celery -A app.core.celery_app worker --loglevel=info -Q document-processing,main-queue --pool=solo --events
    ```
 
 4. 프론트엔드 시작 (새 터미널)
