--- a/docs/로컬_개발_환경_설정.md
+++ b/docs/로컬_개발_환경_설정.md
@@ -26,7 +26,7 @@
 2. Python 가상환경 생성 및 활성화
    ```powershell
    cd backend_new
-   python -m venv venv
+      
    .\venv\Scripts\Activate
    ```
 
@@ -60,7 +60,7 @@
    ```powershell
    cd backend_new
    .\venv\Scripts\Activate
-   uvicorn app.main:app --reload
+   uvicorn app.main:app --reload --log-level debug
    ```
 
 3. Celery Worker 시작 (새 터미널)
