타입 적용작업 1차  - 기존 동작방식을 변경하지 않고, 타입구조만 일치
.windsurfrules / .cursorrules 파일에 AI Coding Rules 적용

--- a/docs/로컬_개발_환경_설정.md
+++ b/docs/로컬_개발_환경_설정.md
@@ -26,7 +26,7 @@
 2. Python 가상환경 생성 및 활성화
    ```powershell
    cd backend_new
-      
+   python -m venv venv   
    .\venv\Scripts\Activate
    ```
 
